# admin-portal

./: Dockerfile  README.md  README2.md  docker-stack.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: app-setup.yml  celery-deploy.yml  ci.yml  pgdeploy.yml  pgsetup.yml  redis-deploy.yml
apex/: __ini__.py  asgi.py  env.py  urls.py  wsgi.py
apex/libs_config/: celery.py
deploy/: docker-stack.yml
deploy/celery/: celery-compose.yml
deploy/postgres/: postgres-compose.yml
deploy/postgres/conf/: 00_init_app_db.sh
deploy/redis/: redis-compose.yml
