[project]
name = "admin-portal-app"
version = "0.1.0"
description = "Avetium Admin Portal."
authors = [
    {name = "peter-mbachu",email = "peter.mbachu@avetiumconsult.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "django-guardian (>=3.0.0,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "uritemplate (>=4.1.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "django (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-oauth-toolkit (>=3.0.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-phonenumber-field[phonenumbers] (>=8.1.0,<9.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "mailtrap (>=2.1.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "django-grappelli (>=4.0.2,<5.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "channels (>=4.3.2,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-mock = "^3.14.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
addopts = "--cov=apex --cov-report=xml --cov-report=html"
testpaths = ["tests"]

[tool.poetry.group.docs.dependencies]
drf-spectacular = "^0.28.0"

[tool.poetry.group.log.dependencies]
python-json-logger = "^4.1.0"
django-guid = "^3.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"